# workflow

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md  build.rs  demo.webm  docker-compose.yaml  example.yml  start.sh  start_containers.sh  stop.sh  stop_containers.sh
.github/workflows/: main.yml
migrations/2023-07-23-053413_initial_migration/: down.sql  up.sql
migrations/2023-08-07-073406_processes_trigger/: down.sql  up.sql
migrations/2023-08-09-111748_stdout_stderr/: down.sql  up.sql
proto/: grpc.proto
src/: cli.rs  engine.rs  engine_utils.rs  lib.rs  main.rs  models.rs  parser.rs  schema.rs  tests.rs  utils.rs
src/components/: event.rs  task.rs
src/engine/: event.rs  task.rs
tests/tasks/: create_foo.sh  free.sh
tests/workflows/: example.yml
tests/workflows/example/: ping.sh  workflow.yml
tests/workflows/example/tasks/: create_bar.sh  create_foo.sh  free.sh  ls.sh
tests/workflows/log_stream/: workflow.yml
tests/workflows/log_stream/tasks/: stream.sh
tests/workflows/periodic_checks/: time_check.sh  workflow.yml
tests/workflows/periodic_checks/tasks/: memory_usage_check.sh  system_file_check.sh
tests/workflows/weather_checks/: weather_check.sh  workflow.yml
tests/workflows/weather_checks/tasks/: log_error.sh  log_weather.sh
