[package]
name = "workflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["blocking"]}
anyhow = "1"
redis = { version = "0.23.0" }
postgres = { version = "0.19.5" }
dotenv = "0.15.0"
serde = { version = "1.0.164", features = ["derive"] }
bincode = "1.3.3"
ctrlc = "3.4.0"
rayon = "1.7.0"
chrono = { version = "0.4.26", features = ["serde"] }